--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "ajv": "^8.6.3",
+    "express": "^4.17.1",
+    "joi": "^17.4.2"
   }
 }
