validator base set up, best practice research for ajv validator using modular definition based schema implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
     "outDir": "./dist",
     "sourceMap": true,
     "removeComments": true,
-    "module": "commonjs"
+    "module": "commonjs",
+    "baseUrl": "./src",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
+    "strictNullChecks": true
   }
 }
