--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "dependencies": {
     "ajv": "^8.6.3",
-    "express": "^4.17.1",
-    "joi": "^17.4.2"
+    "express": "^4.17.1"
   }
 }
