--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "complie": "npm run clean && tsc && clear",
     "build": "webpack --config webpack.config.js",
     "prestart": "npm run complie && npm run build",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/api/index.ts"
   },
   "repository": {
     "type": "git",
