--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/sbbeez/wolo-rfm#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/knex": "^0.16.1",
+    "@types/pg": "^8.6.1",
     "nodemon": "^2.0.13",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
@@ -34,6 +37,9 @@
   "dependencies": {
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.0.0",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.11",
+    "pg": "^8.7.1"
   }
 }
